fix(styles): fixed tv header on small screens

--- a/styles.scss
+++ b/styles.scss
@@ -106,6 +106,10 @@ body {
       margin: 16px auto;
       margin-bottom: 8px;
     }
+
+    @media (max-width: 400px) {
+      font-size: 16px;
+    }
   }
 }
 
